@@ -1,3 +1,4 @@
+* Use origin for inventory moves
 * Allow partial assignation on Supplier Shipment Return
 
 Version 3.0.0 - 2013-10-21
